# mvelikikh.github.io

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_and_deploy.yml
docs/: index.md  tags.md  tools.md  yandex_89ef5a005ad74c1a.html
docs/assets/: extra.css
docs/blog/posts/: .template.md  12c-px-auto-dop-without-io-calibration.md  a-case-for-datafilecopy-format.md  a-lot-of-log.-files-in-dirbdb-directory.md  apex-wwv_flow_security.get_owner_of_calling_code-and-12.2.md  asm-disk-group-fails-to-mount-with-ora-15017-ora-15066-errors-offlining-disk-racqlun3-in-group-data-may-result-in-a-data-loss.md  asynchronous-global-index-maintenance-and-recycle-bin.md  asynchronous-global-index-maintenance-effects.md  bitmap-conversion-to-rowids-with-global-indexes.md  bug-15931756-ora-4031-queries-against-sys_fba_trackedtables-not-shared-do-not-use-binds.md  bug-20214168-wrong-results-using-aggregations-of-case-expression-with-fix-of-bug-20003240-present.md  bug-26588069-wrong-result-duplicate-rows-produced-using-group-by-after-upgrading-to-12.2.0.1.md  bug-30324180-sql-macro-should-be-backported-to-19.5.md  bug-4991675-diagnostic-event-improve-diagnosability-of-data-dictionary-invalidation-issues.md  c3p0-probablynot-connection-test-query.md  cha-alert-cha_dbwr_ckpt_io_complete-in-oem.md  computing-ora_hash.md  concatenation-and-filter-subqueries-oddity.md  create-standby-skip-pluggable-database.md  (+84 more)
src/: hooks.py
src/config/: config.yml
src/scripts/: convert_blogger_backup_to_md.py  git_import.py
(+5 files in other folders)
